--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
                             <a class="nav-link active text-white" aria-current="page" href="#">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Productos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Contacto</a>
+                            <a class="nav-link text-white" href="./productos.html">Productos</a>
                         </li>
                     </ul>
                 </div>
